fix: scrollbar styles

--- a/css/drift.css
+++ b/css/drift.css
@@ -345,27 +345,6 @@ template {
   padding: 0;
 }
 
-/* Works on Firefox */
-* {
-  scrollbar-width: thin;
-  scrollbar-color: #2553e3 white;
-}
-
-/* Works on Chrome, Edge, and Safari */
-*::-webkit-scrollbar {
-  width: 0.6rem;
-}
-
-*::-webkit-scrollbar-track {
-  background: white;
-}
-
-*::-webkit-scrollbar-thumb {
-  background-color: #2553e3;
-  border-radius: 1rem;
-  border: 3px solid white;
-}
-
 html {
   box-sizing: border-box;
   font-size: 20px;
