--- a/src/_base.scss
+++ b/src/_base.scss
@@ -2,65 +2,44 @@
 *,
 *::before,
 *::after {
-    box-sizing: inherit;
-    margin: 0;
-    padding: 0;
-}
-
-/* Works on Firefox */
-* {
-    scrollbar-width: thin;
-    scrollbar-color: $primary-color $gray-color-light;
-}
-
-/* Works on Chrome, Edge, and Safari */
-*::-webkit-scrollbar {
-    width: $unit-3;
-}
-
-*::-webkit-scrollbar-track {
-    background: $gray-color-light;
-}
-
-*::-webkit-scrollbar-thumb {
-    background-color: $primary-color;
-    border-radius: $unit-5;
-    border: 3px solid $gray-color-light;
+   box-sizing: inherit;
+   margin: 0;
+   padding: 0;
 }
 
 html {
-    box-sizing: border-box;
-    font-size: $html-font-size;
-    line-height: $html-line-height;
-    -webkit-tap-highlight-color: transparent;
-    scroll-behavior: smooth;
+   box-sizing: border-box;
+   font-size: $html-font-size;
+   line-height: $html-line-height;
+   -webkit-tap-highlight-color: transparent;
+   scroll-behavior: smooth;
 }
 
 body {
-    background: $body-bg;
-    color: $body-font-color;
-    font-family: $body-font-family;
-    font-size: $font-size;
-    overflow-x: hidden;
+   background: $body-bg;
+   color: $body-font-color;
+   font-family: $body-font-family;
+   font-size: $font-size;
+   overflow-x: hidden;
 }
 
 a {
-    color: $link-color;
-    outline: none;
-    text-decoration: none;
+   color: $link-color;
+   outline: none;
+   text-decoration: none;
 
-    &:focus,
-    &:hover,
-    &:active,
-    &.active {
-        text-decoration: underline;
-    }
+   &:focus,
+   &:hover,
+   &:active,
+   &.active {
+      text-decoration: underline;
+   }
 }
 
 img {
-    max-width: 100%;
+   max-width: 100%;
 }
 
 .hide {
-    display: none;
+   display: none;
 }
